Improvements and some fixes